Added some changes to selectors in modal window

--- a/src/components/callback/callback.hbs
+++ b/src/components/callback/callback.hbs
@@ -58,7 +58,7 @@
                     <div class="callback-form__info-right"></div>
                 </div>
                 <div class="callback-form__control">
-                    <div class="callback-form__control-group">
+                    <div class="callback-form__control-group first-group">
                         <div class="callback-form__data date">
                             <div class="callback-form__data-name">Дата</div>
                             <input type="text" name="date" class="callback-form__data-value" value="21.01.2020">
