--- a/src/pages/candidate-search-offers.hbs
+++ b/src/pages/candidate-search-offers.hbs
@@ -6,7 +6,7 @@
             <div class="dashboard dashboard__two-columns">
                 <div class="inner-container__big dashboard__main">
                     <div class="applicants__search-form">
-                        <div class="fraimed-container dashboard__container">
+                        <div class="frame dashboard__container">
                             <form action="" class="search-form">
                                 <div class="search-form__find">
                                     <div class="search-form__search-wrap">
@@ -53,7 +53,7 @@
                     </div>
                     <div class="vacancies__list">
                         <div class="vacancy">
-                            <div class="fraimed-container dashboard__container">
+                            <div class="frame dashboard__container">
                                 <div class="candidate__first-line vacancy__line-first">
                                     <a href="#" class="base__title candidate__name">Senior Backend Developer</a>
                                     <div class="candidate__date vacancy__date">12 Годин тому</div>
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                         <div class="vacancy">
-                            <div class="fraimed-container dashboard__container">
+                            <div class="frame dashboard__container">
                                 <div class="candidate__first-line vacancy__line-first">
                                     <a href="#" class="base__title candidate__name">Senior Backend Developer</a>
                                     <div class="candidate__date vacancy__date">2 днi тому</div>
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <div class="vacancy">
-                            <div class="fraimed-container dashboard__container">
+                            <div class="frame dashboard__container">
                                 <div class="candidate__first-line vacancy__line-first">
                                     <a href="#" class="base__title candidate__name">Senior Backend Developer</a>
                                     <div class="candidate__date vacancy__date">12 Годин тому</div>
@@ -160,10 +160,10 @@
                     </div>
                 </div>
                 <div class="inner-container__small dashboard__aside">
-                    <div class="fraimed-container filters__container search-candidate__filters">
+                    <div class="frame filters__container search-candidate__filters">
                         {{> filters }}
                     </div>
-                    <div class="fraimed-container filters__container search-candidate__subscribes">
+                    <div class="frame filters__container search-candidate__subscribes">
                         <div class="filter my-subscribers">
                             <div class="base__subtitle filter__title title_active">Мої пiдписки</div>
                             <div class="filter__body" style="display: block;">
