--- a/src/pages/candidate-search-recruiters.hbs
+++ b/src/pages/candidate-search-recruiters.hbs
@@ -4,7 +4,7 @@
         <section class="candidate-recruiters">
             <div class="dashboard dashboard__two-columns candidate-recruiters__columns">
                 <div class="inner-container__small dashboard__aside candidate-recruiters__aside">
-                    <div class="fraimed-container candidate-recruiters__container">
+                    <div class="frame candidate-recruiters__container">
                         <div class="applicant__image">
                             <img src="./images/applicant.png" alt="">
                         </div>
@@ -22,7 +22,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="fraimed-container candidate-recruiters__buttons">
+                    <div class="frame candidate-recruiters__buttons">
                         <button class="empty-button candidate-recruiters__button">Вiдкрити контакти</button>
                         <button class="empty-button candidate-recruiters__button">Пропозиція не цікава</button>
                         <button class="empty-button candidate-recruiters__button button-red">Відмовити</button>
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="inner-container__big dashboard__main">
-                    <div class="fraimed-container candidate-recruiters__container-main">
+                    <div class="frame candidate-recruiters__container-main">
                         <ul class="candidate-recruiters__letters">
                            <li class="candidate-recruiters__letter">
                                <div class="candidate-recruiters__letter-date">04.06.2020</div>
