--- a/src/pages/candidates-account.hbs
+++ b/src/pages/candidates-account.hbs
@@ -6,7 +6,7 @@
                 <h1 class="dashboard__section-title">Мiй акаунт</h1>
                 <form action="" class="candidates-account__form">
                     <div class="candidates-account">
-                        <div class="fraimed-container candidates-account__container part1">
+                        <div class="frame candidates-account__container part1">
                             <div class="candidates-account__first-line">
                                 <div class="candidates-account__top">
                                     <div class="candidates-account__image-wrap">
@@ -36,7 +36,7 @@
                                 <input id="af-company" class="worksheet-form__input" value="Interview.top">
                             </div>
                         </div>
-                        <div class="fraimed-container candidates-account__container part2">
+                        <div class="frame candidates-account__container part2">
                             <div class="worksheet-form__line">
                                 <label for="af-email" class="worksheet-form__label candidates-account__label">Email</label>
                                 <input id="af-email" class="worksheet-form__input" value="RandomEmail@gmail.com">
