--- a/src/pages/candidates-settings.hbs
+++ b/src/pages/candidates-settings.hbs
@@ -6,7 +6,7 @@
             <h1 class="candidates-settings__title">Налаштування</h1>
             <div class="dashboard dashboard__two-columns candidates-settings__columns">
                 <div class="inner-container__small dashboard__aside candidates-settings__aside">
-                    <div class="fraimed-container candidates-settings__container-aside">
+                    <div class="frame candidates-settings__container-aside">
                         <ul class="candidates-settings__tabs">
                             <li class="candidates-settings__tab active-tab">
                                 <div class="candidates-settings__tab-icon">
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="inner-container__big dashboard__main">
-                    <div class="fraimed-container candidates-settings__container-main">
+                    <div class="frame candidates-settings__container-main">
                         <form action="" class="settings-form">
                             <ul class="candidates-settings__contents">
                                 <li class="candidates-settings__content active-content">
