--- a/src/pages/recruitment-list.hbs
+++ b/src/pages/recruitment-list.hbs
@@ -4,7 +4,7 @@
         <section class="dashboard">
             <div class="dashboard__section sent-offers">
                 <div class="base__title dashboard__alert">Ви повинні оплатити всі найми перед тим як продовжити користуватися сервісом</div>
-                <div class="fraimed-container dashboard__container">
+                <div class="frame dashboard__container">
                     <div class="offer recruitment-list">
                         <div class="offer__intro">
                             <a href="#" class="base__subtitle offer__title">С++/Qt Developer</a>
@@ -46,7 +46,7 @@
             <div class="dashboard__section inform-recruitment">
                 <h1 class="inform-recruitment__title">Повiдомити про найм</h1>
                 <div class="base__subtitle inform-recruitment__subtitle">Найняли кандидата? Повiдомте нам будь-ласка</div>
-                <div class="fraimed-container dashboard__container">
+                <div class="frame dashboard__container">
                     <div class="dashboard__recruitment-form">
                         {{> recruitment-form }}
                     </div>
