--- a/src/pages/recruter-dashboard.hbs
+++ b/src/pages/recruter-dashboard.hbs
@@ -5,9 +5,19 @@
             <div class="dashboard__section selected-candidates">
                 <div class="h2 dashboard__section-title">Обрані кандидати</div>
                 <div class="frame dashboard__container">
-                    <div class="candidate">
+                    <div class="selected-candidates">
+                        <div class="candidate">
                         <div class="candidate__first-line">
-                            <a href="#" class="base__title candidate__name">Дмитро Пенчук</a>
+                            <div class="candidate__name-rating">
+                                <a href="#" class="base__title candidate__name nowrap">Дмитро Пенчук</a>
+                                <div class="candidate__rating">
+                                    <div class="star">
+                                        <div class="star__container">
+                                            <div class="star__inform"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="candidate__date">Вiд: 04.06.2020</div>
                         </div>
                         <div class="candidate__items">
@@ -42,6 +52,7 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
