--- a/src/components/callback/callback.scss
+++ b/src/components/callback/callback.scss
@@ -37,7 +37,7 @@
         }
 
         &.first-group {
-          @media(max-width: 374px) {
+          @media(max-width: 639px) {
             max-width: 175px;
             align-items: flex-start;
           }
@@ -71,11 +71,21 @@
         img {
           width: 72px;
         }
+
+        @media(max-width: 374px) {
+          margin-bottom: 10px;
+          margin-left: 0;
+          margin-right: 100px;
+        }
       }
 
       &-text {
         line-height: 2;
         letter-spacing: 0.07em;
+
+        @media(max-width: 374px) {
+          line-height: 1.5;
+        }
       }
 
       @media(max-width: 374px) {
@@ -172,7 +182,7 @@
 
       &.communicator {
 
-        @media(max-width: 374px) {
+        @media(max-width: 639px) {
           flex-direction: column;
           align-items: flex-start;
 
