--- a/src/components/svg-icons/svg-icons.scss
+++ b/src/components/svg-icons/svg-icons.scss
@@ -11,3 +11,15 @@
   width: 24px;
   height: 24px;
 }
+
+/* using on candidate-settings */
+.e-settings {
+  width: 20px;
+  height: 20px;
+  fill: none;
+  stroke: $lightgray;
+
+  &_trash {
+    stroke: $red;
+  }
+}
