--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -13,15 +13,15 @@
 @import './nav/nav';
 @import './menu-toggle/menu-toggle';
 @import './social-media/social-media';
-@import './fraimed-container/fraimed-container';
+@import './frame/frame';
 @import './dropdown-toggle/dropdown-toggle';
 @import './salary-filter/salary-filter';
 @import './filters/filters';
 @import './main-menu/main-menu';
 @import './load-more/load-more';
 @import './main-header/main-header';
-@import './main-content/main-content';
 @import './registration/registration';
+@import './main-content/main-content';
 @import './recruitment-form/recruitment-form';
 @import './dashboard/dashboard';
 @import './candidate/candidate';
