--- a/src/components/main-header/main-header.hbs
+++ b/src/components/main-header/main-header.hbs
@@ -26,7 +26,7 @@
                     <div class="dropdown-toggle__icon">
                         <img src="./images/bell_active.png">
                     </div>
-                    <div class="fraimed-container dropdown-toggle__container">
+                    <div class="frame dropdown-toggle__container">
                         <div class="base__subtitle dropdown-toggle__title">Новi повiдомлення</div>
                         <ul class="dropdown-toggle__messages">
                             <li class="dropdown-toggle__message">
@@ -58,7 +58,7 @@
                 <div class="dropdown-toggle__icon">
                     <span></span>
                 </div>
-                <div class="fraimed-container dropdown-toggle__container">
+                <div class="frame dropdown-toggle__container">
                     <ul class="dropdown-toggle__list">
                         <li class="dropdown-toggle__item"><a href="#" class="dropdown-toggle__link">
                             Налаштування</a>
