--- a/src/components/my-interview/my-interview.hbs
+++ b/src/components/my-interview/my-interview.hbs
@@ -1,6 +1,6 @@
 <div class="my-interview">
     <div class="my-interview__items">
-        <div class="fraimed-container my-interview__item">
+        <div class="frame my-interview__item">
             <div class="scheduled-interview__date my-interview__date">20.05.20</div>
             <div class="my-interview__activation">
                 <input id="sf1" class="thumbler__toggle thumbler__toggle-round my-interview__activation-toggle" type="checkbox" checked="">
@@ -21,7 +21,7 @@
                 </div>
             </div>
         </div>
-        <div class="fraimed-container my-interview__item">
+        <div class="frame my-interview__item">
             <div class="scheduled-interview__date my-interview__date">19.05.20</div>
             <div class="my-interview__activation">
                 <input id="sf2" class="thumbler__toggle thumbler__toggle-round my-interview__activation-toggle" type="checkbox" checked="">
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>
-        <div class="fraimed-container my-interview__item">
+        <div class="frame my-interview__item">
             <div class="scheduled-interview__date my-interview__date">15.05.20</div>
             <div class="my-interview__activation">
                 <input id="sf3" class="thumbler__toggle thumbler__toggle-round my-interview__activation-toggle" type="checkbox" checked="">
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <div class="fraimed-container my-interview__item transparent">
+        <div class="frame my-interview__item transparent">
             <div class="scheduled-interview__date my-interview__date">10.05.20</div>
             <div class="my-interview__activation">
                 <input id="sf4" class="thumbler__toggle thumbler__toggle-round my-interview__activation-toggle" type="checkbox">
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </div>
-        <div class="fraimed-container my-interview__item">
+        <div class="frame my-interview__item">
             <div class="scheduled-interview__date my-interview__date">21.05.20</div>
             <div class="my-interview__activation">
                 <input id="sf5" class="thumbler__toggle thumbler__toggle-round my-interview__activation-toggle" type="checkbox" checked="">
@@ -105,7 +105,7 @@
                 </div>
             </div>
         </div>
-        <div class="fraimed-container my-interview__item transparent">
+        <div class="frame my-interview__item transparent">
             <div class="scheduled-interview__date my-interview__date">21.05.20</div>
             <div class="my-interview__activation">
                 <input id="sf6" class="thumbler__toggle thumbler__toggle-round my-interview__activation-toggle" type="checkbox">
@@ -126,7 +126,7 @@
                 </div>
             </div>
         </div>
-        <div class="fraimed-container my-interview__item">
+        <div class="frame my-interview__item">
             <div class="scheduled-interview__date my-interview__date">21.05.20</div>
             <div class="my-interview__activation">
                 <input id="sf7" class="thumbler__toggle thumbler__toggle-round my-interview__activation-toggle" type="checkbox" checked="">
@@ -147,7 +147,7 @@
                 </div>
             </div>
         </div>
-        <div class="fraimed-container my-interview__item">
+        <div class="frame my-interview__item">
             <div class="scheduled-interview__date my-interview__date">21.05.20</div>
             <div class="my-interview__activation">
                 <input id="sf8" class="thumbler__toggle thumbler__toggle-round my-interview__activation-toggle" type="checkbox" checked="">
