--- a/src/pages/recruter-dashboard-empty.hbs
+++ b/src/pages/recruter-dashboard-empty.hbs
@@ -6,7 +6,7 @@
                 <div class="h2 dashboard__section-title">Обрані кандидати</div>
                 <button class="the-button dashboard__section-button">
                     Дивитись кандидатів
-                    {{> icon iconName="subscribe" classNames="plus-icon" }}
+                    {{> icon iconName="subscribe_white" classNames="plus-icon" }}
                 </button>
                 <div class="dashboard__message-info">Ви не обрали жодного кандидата</div>
             </div>
