--- a/src/pages/recruter-search-candidates-list.hbs
+++ b/src/pages/recruter-search-candidates-list.hbs
@@ -6,7 +6,7 @@
             <div class="dashboard dashboard__two-columns">
                 <div class="inner-container__big dashboard__main">
                     <div class="applicants__search-form">
-                        <div class="fraimed-container applicants__container">
+                        <div class="frame applicants__container">
                             {{> search-form }}
                         </div>
                     </div>
@@ -19,7 +19,7 @@
                     <div class="applicants__list">
                         <div class="applicant">
                             <div class="applicant__info">
-                                <div class="fraimed-container dashboard__container">
+                                <div class="frame dashboard__container">
                                     <div class="candidate">
                                         <div class="candidate__first-line">
                                             <div class="candidate__name-rating">
@@ -84,7 +84,7 @@
                         </div>
                         <div class="applicant">
                             <div class="applicant__info">
-                                <div class="fraimed-container dashboard__container">
+                                <div class="frame dashboard__container">
                                     <div class="candidate">
                                         <div class="candidate__first-line">
                                             <div class="candidate__name-rating">
@@ -153,7 +153,7 @@
                         </div>
                         <div class="applicant">
                             <div class="applicant__info">
-                                <div class="fraimed-container dashboard__container">
+                                <div class="frame dashboard__container">
                                     <div class="candidate">
                                         <div class="candidate__first-line">
                                             <div class="candidate__name-rating">
@@ -220,10 +220,10 @@
                     </div>
                 </div>
                 <div class="inner-container__small dashboard__aside">
-                    <div class="fraimed-container filters__container search-candidate__filters">
+                    <div class="frame filters__container search-candidate__filters">
                         {{> filters }}
                     </div>
-                    <div class="fraimed-container filters__container search-candidate__subscribes">
+                    <div class="frame filters__container search-candidate__subscribes">
                         <div class="filter my-subscribers">
                             <div class="base__subtitle filter__title title_active">Мої пiдписки</div>
                             <div class="filter__body" style="display: block;">
