--- a/src/pages/subscribes.hbs
+++ b/src/pages/subscribes.hbs
@@ -4,7 +4,7 @@
         <section class="subscribes">
             <h1 class="subscribes__title">Пiдписки</h1>
             <div class="dashboard subscribes__lines">
-                <div class="fraimed-container subscribes__line">
+                <div class="frame subscribes__line">
                     <div class="subscribes__block">
                         <div class="subscribes__activation">
                             <input id="bigblock-1" class="thumbler__toggle thumbler__toggle-round subscribes__activation-toggle" type="checkbox" checked="">
@@ -76,7 +76,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="fraimed-container subscribes__line">
+                <div class="frame subscribes__line">
                     <div class="subscribes__block">
                         <div class="subscribes__activation">
                             <input id="bigblock-2" class="thumbler__toggle thumbler__toggle-round subscribes__activation-toggle" type="checkbox" checked="">
@@ -151,7 +151,7 @@
             </div>
             <div class="dashboard__two-columns subscribes__columns">
                 <div class="inner-container">
-                    <div class="fraimed-container subscribes__container">
+                    <div class="frame subscribes__container">
                         <div class="subscribes__block">
                             <div class="subscribes__activation">
                                 <input id="sf1-activation" class="thumbler__toggle thumbler__toggle-round subscribes__activation-toggle" type="checkbox" checked="">
@@ -226,7 +226,7 @@
                     </div>
                 </div>
                 <div class="inner-container">
-                    <div class="fraimed-container subscribes__container">
+                    <div class="frame subscribes__container">
                         <div class="subscribes__block">
                             <div class="subscribes__activation">
                                 <input id="sf2-activation" class="thumbler__toggle thumbler__toggle-round subscribes__activation-toggle" type="checkbox" checked="">
