--- a/src/components/dropdown-toggle/dropdown-toggle.hbs
+++ b/src/components/dropdown-toggle/dropdown-toggle.hbs
@@ -2,7 +2,7 @@
     <div class="dropdown-toggle__icon">
         <span></span>
     </div>
-    <div class="fraimed-container dropdown-toggle__container">
+    <div class="frame dropdown-toggle__container">
         <ul class="dropdown-toggle__list">
             <li class="dropdown-toggle__item"><a href="#" class="dropdown-toggle__link">Відправити в архів</a></li>
             <li class="dropdown-toggle__item"><a href="#" class="dropdown-toggle__link">Відкрити контакти</a></li>
