--- a/src/components/svg-icons/svg-icons.scss
+++ b/src/components/svg-icons/svg-icons.scss
@@ -23,3 +23,31 @@
     stroke: $red;
   }
 }
+
+/* sing on candidates-profile */
+.cloud {
+  fill-opacity: 0;
+  width: 13px;
+  height: 13px;
+  margin: 1px 0 0 7px;
+}
+
+/* sing on recruiter-dashboard */
+.camera {
+  width: 27px;
+  height: 14px;
+  fill: $blue;
+}
+
+.zoom {
+  width: 61px;
+  height: 14px;
+  fill: $blue;
+}
+
+.plus-icon {
+  fill-opacity: 0;
+  width: 13px;
+  height: 13px;
+  margin-left: 10px;
+}
