--- a/src/pages/recruter-search-candidate-message-right.hbs
+++ b/src/pages/recruter-search-candidate-message-right.hbs
@@ -11,7 +11,7 @@
                     <div class="applicant">
                         <div class="applicant__text-info">
                             <div class="inner-container__big applicant__info">
-                                <div class="fraimed-container dashboard__container">
+                                <div class="frame dashboard__container">
                                     <div class="candidate">
                                         <div class="candidate__first-line">
                                             <a href="#" class="base__title candidate__name">Python Developer</a>
@@ -71,7 +71,7 @@
                                     <div class="base__subtitle more-applicants__title">Cхожi кандидати:</div>
                                     <div class="more-applicants__wrap">
                                         <div class="more-applicants__slides">
-                                        <a href="recruter-search-candidate.html" class="slide fraimed-container">
+                                        <a href="recruter-search-candidate.html" class="slide frame">
                                             <div class="slide__position">Python Developer</div>
                                             <div class="vacancy__location slide__location">Київ</div>
                                             <div class="slide__last-line">
@@ -81,7 +81,7 @@
                                                 </div>
                                             </div>
                                         </a>
-                                        <a href="recruter-search-candidate.html" class="slide fraimed-container">
+                                        <a href="recruter-search-candidate.html" class="slide frame">
                                             <div class="slide__position">Python Developer</div>
                                             <div class="vacancy__location slide__location">Одесса</div>
                                             <div class="slide__last-line">
@@ -91,7 +91,7 @@
                                                 </div>
                                             </div>
                                         </a>
-                                        <a href="recruter-search-candidate.html" class="slide fraimed-container">
+                                        <a href="recruter-search-candidate.html" class="slide frame">
                                             <div class="slide__position">Python Developer</div>
                                             <div class="vacancy__location slide__location">Івано-Франківськ</div>
                                             <div class="slide__last-line">
@@ -101,7 +101,7 @@
                                                 </div>
                                             </div>
                                         </a>
-                                        <a href="recruter-search-candidate.html" class="slide fraimed-container">
+                                        <a href="recruter-search-candidate.html" class="slide frame">
                                             <div class="slide__position">Python Developer</div>
                                             <div class="vacancy__location slide__location">Житомир</div>
                                             <div class="slide__last-line">
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="inner-container__small dashboard__aside applicant__card">
-                    <div class="fraimed-container applicant__card-container">
+                    <div class="frame applicant__card-container">
                         <div class="applicant__image">
                             <img src="./images/empty_photo.png" alt="">
                         </div>
@@ -134,7 +134,7 @@
             <div class="applicant__interview">
                 <div class="applicant__interview-left">
                     <h2 class="applicant__interview-title">Інтерв`ю</h2>
-                    <div class="fraimed-container applicant__interview-video">
+                    <div class="frame applicant__interview-video">
                         <video class="video" controls="">
                             <source class="video-iframe" src="http://sitesdepot.ru/wp-rizor-hover/wp-content/uploads/2020/01/rizor-hover2.mp4" type="video/mp4">
                         </video>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="applicant__interview-right">
                     <div class="base__subtitle applicant__answers-title">Запитання:</div>
-                    <div class="fraimed-container applicant__answers-wrap">
+                    <div class="frame applicant__answers-wrap">
                         <ol class="applicant__answers">
                             <li class="applicant__answer">
                                 <div class="applicant__answer-text">Что такое Virtual DOM?</div>
